@@ -1,3 +1,7 @@
+2005-09-10 Philippe April  <philippe@ilesansfil.org>
+	* signup.php: Fixed bug in detecting is the user is already part of the
+	network.
+
 2005-09-10 Francois Proulx <francois.proulx@gmail.com>
 	* Automatically redirect user to login form when trying to access admin
 	* Added various isset, empty tests, vars init in stats (to avoid php warning)
